@@ -1,3 +1,15 @@
+2004-03-19  Darin Adler  <darin@apple.com>
+
+        Reviewed by Ken.
+
+        - fixed <rdar://problem/3583945>: crash when choosing a file to upload
+
+        * kwq/KWQFileButton.mm:
+        (-[KWQFileButtonAdapter dealloc]): Removed unneeded method.
+        (-[KWQFileButtonAdapter filenameChanged:]): Check for nil.
+        (-[KWQFileButtonAdapter focusChanged:]): Ditto.
+        (-[KWQFileButtonAdapter clicked]): Ditto.
+
 2004-03-17  Darin Adler  <darin@apple.com>
 
         Reviewed by John.
